--- a/src/stylesheets/components/cell.less
+++ b/src/stylesheets/components/cell.less
@@ -1,13 +1,17 @@
 .cell {
-    flex: 1 0 25%;
+    @size: 150px;
+
+    flex: 1 0 10%;
     position: relative;
-    min-height: 250px;
+    min-width: @size;
+    min-height: @size;
 
     &-media {
         width: 100%;
         height: 100%;
 
         &-background {
+            background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -24,7 +28,7 @@
         text-decoration: none;
 
         &:before {
-            content: 'Click to copy URL to clipboard!';
+            content: 'Copy URL to clipboard';
             position: absolute;
             top: 0;
             right: 0;
